--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,9 @@
     <script src="/assets/js/script.js"></script>
     <script src="/assets/js/pages/index.js"></script>
   </head>
-  <body class="site-base site-index-page">
+  <body class="site-base">
     <!-- wrapper-->
-    <div class="site-wrapper" id="wrapper">
+    <div class="site-wrapper site-index-page" id="wrapper">
 
       <!-- header-->
       <header class="site-header">
