Update _app, .base_src

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <title>index title</title>
-    <meta name="description" content="index description">
-    <meta name="keywords" content="index keywords">
+    <title>top title</title>
+    <meta name="description" content="top description">
+    <meta name="keywords" content="top keywords">
     <link href="/assets/css/style.css" rel="stylesheet">
     <script src="/assets/js/script.js"></script>
-    <script src="/assets/js/pages/index.js"></script>
+    <script src="/assets/js/pages/top.js"></script>
   </head>
   <body class="site-base">
     <!-- wrapper-->
-    <div class="site-wrapper site-index-page" id="wrapper">
+    <div class="site-wrapper site-top-page" id="wrapper">
 
       <!-- header-->
       <header class="site-header">
