--- a/htdocs/_styleguide/color.html
+++ b/htdocs/_styleguide/color.html
@@ -41,7 +41,7 @@
           </div>
         </article>
       </main>
-      <footer class="aigis-footer">Last update at 2020/03/09</footer>
+      <footer class="aigis-footer">Last update at 2020/03/29</footer>
     </div>
     <div id="offcanvas-slide" uk-offcanvas class="uk-offcanvas uk-scope">
       <div class="uk-offcanvas-bar">
@@ -50,7 +50,7 @@
             <div class="uk-container">
               <h2 class="uk-h2">CATEGORIES</h2>
               <nav>
-                <div class="uk-list uk-list-divider tm-collection-tree"><ul data-path-depth="0"><li data-path-depth="0"><a href="category/components/index.html">components</a><ul data-path-depth="1"><li data-path-depth="1"><a href="category/components/accordion/index.html">accordion</a></li><li data-path-depth="1"><a href="category/components/ellipsis/index.html">ellipsis</a></li><li data-path-depth="1"><a href="category/components/expander/index.html">expander</a></li><li data-path-depth="1"><a href="category/components/intersection/index.html">intersection</a></li><li data-path-depth="1"><a href="category/components/modal/index.html">modal</a></li><li data-path-depth="1"><a href="category/components/tab/index.html">tab</a></li></ul></li></ul>
+                <div class="uk-list uk-list-divider tm-collection-tree"><ul data-path-depth="0"><li data-path-depth="0"><a href="category/components/index.html">components</a><ul data-path-depth="1"><li data-path-depth="1"><a href="category/components/accordion/index.html">accordion</a></li><li data-path-depth="1"><a href="category/components/ellipsis/index.html">ellipsis</a></li><li data-path-depth="1"><a href="category/components/expander/index.html">expander</a></li><li data-path-depth="1"><a href="category/components/icon/index.html">icon</a></li><li data-path-depth="1"><a href="category/components/intersection/index.html">intersection</a></li><li data-path-depth="1"><a href="category/components/modal/index.html">modal</a></li><li data-path-depth="1"><a href="category/components/tab/index.html">tab</a></li></ul></li></ul>
                 </div>
               </nav>
               <h2 class="uk-h2">TAG</h2>
